# online_cinema

./: .dockerignore  .env.sample  .flake8  .gitignore  Dockerfile  README.MD  README.md  alembic.ini  docker-compose-dev.yml  docker-compose-local.yml  docker-compose-prod.yml  docker-compose-tests.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 196bd63206b0_movies_and_profile_models.py  3faf5b971094_add_default_user_groups.py  74626285121c_add_cart_cart_items_table.py  fc7449621534_initial_schema.py
commands/: run_migration.sh  run_web_server_prod.sh
docker/mailhog/: Dockerfile
src/: celery_app.py  main.py
src/config/: __init__.py  celery.py  dependencies.py  settings.py
src/database/: __init__.py  database.py  populate.py  session_postgresql.py  session_sqlite.py
src/database/migrations/: env.py
src/database/migrations/versions/: 45285a52f721_initial_migration.py
src/database/models/: __init__.py  accounts.py  cart.py  movies.py  orders.py  payments.py
src/database/security/: http.py
src/database/seed_data/: movies.csv  test_data.csv  user_groups.csv
src/notifications/: emails.py  interfaces.py
src/notifications/templates/: activation_complete.html  activation_request.html  password_change.html  password_reset_complete.html  send_cancellation.html  send_payment.html  send_refund.html
src/routes/: __init__.py  accounts.py  cart.py  movies.py  orders.py  payments.py  profile.py
src/schemas/: __init__.py  accounts.py  cart.py  movies.py  orders.py  payments.py  profile.py
src/security/: __init__.py
src/storages/: __init__.py
src/tasks/: tokens.py
src/tests/: conftest.py
src/tests/doubles/stubs/: emails.py
src/tests/test_e2e/: test_email_notification.py
src/tests/test_integration/: test_accounts.py  test_carts.py  test_movies.py  test_payments.py  test_profiles.py
src/validation/: __init__.py
