[tool.poetry]
name = "src"
version = "0.1.0"
description = "Online Cinema"
authors = ["Sergiy Yurov <urovsergej10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
python-dotenv = ">=1.1.1,<2.0.0"
sqlalchemy = ">=2.0.41,<3.0.0"
asyncpg = ">=0.30.0,<0.31.0"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
pydantic-settings = ">=2.10.1,<3.0.0"
httpx = "^0.28.1"
flake8 = "^7.3.0"
pytest-asyncio = "^1.0.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.3.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
alembic = "^1.16.4"
email-validator = "^2.2.0"
jinja2 = "^3.1.6"
aiosmtplib = "^4.0.1"
aioboto3 = "^15.0.0"
pillow = "^11.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
